--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                 </div>
                 <ul>
                     <li class="active"><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
+                    <li><a href="">BLOG</a></li>
+                    <li><a href="">PAGES</a></li>
+                    <li><a href="">GALLERY</a></li>
+                    <li><a href="">DEPARTMENTS</a></li>
+                    <li><a href="">CONTACT</a></li>
 
                 </ul>
             </nav>
@@ -98,7 +98,7 @@
     </div>
 </section>
 
-<section id="geral">
+<section id="general">
     <div class="container">
         <section>
             <div class="widget">
@@ -200,14 +200,14 @@
                     <div class="widget_title_text">Deparments</div>
                     <div class="widget_title_bar"></div>
 
-                    <div class="quadrados">    
+                    <div class="squares">    
 
-                       <div class="quadrado1"></div>
-                       <div class="quadrado"></div>
-                       <div class="quadrado2"></div>
-                       <div class="quadrado"></div>
-                       <div class="quadrado3"></div>
-                       <div class="quadrado"></div>
+                       <div class="square1"></div>
+                       <div class="square"></div>
+                       <div class="square2"></div>
+                       <div class="square"></div>
+                       <div class="square3"></div>
+                       <div class="square"></div>
 
                     </div> 
 
