--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 }; 
 </script>
 
+
 <title>MediCenter</title>
 
 </head>
@@ -38,6 +39,7 @@
                 <ul>
                     <li class="active"><a href="">HOME</a></li>
                     <li><a href="">BLOG</a></li>
+                    <li><a href=""> BLOG</a></li>
                     <li><a href="">PAGES</a></li>
                     <li><a href="">GALLERY</a></li>
                     <li><a href="">DEPARTMENTS</a></li>
